--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       // Array of links
       const links = [
         "https://superprofile.bio/bookings/aryancosmofeed",
-        "https://superprofile.bio/bookings/Sakshi123"
+        "https://superprofile.bio/bookings/Sakshi123",
+        "https://superprofile.bio/bookings/babita8424",
       ];
 
       // Function to redirect to a random link
@@ -23,10 +24,10 @@
     </script>
   </head>
   <body>
-    <h1 style="text-align: center; margin-top: 50px;">
+    <h1 style="text-align: center; margin-top: 50px">
       Redirecting you to your strategy call...
     </h1>
-    <p style="text-align: center; color: #555;">
+    <p style="text-align: center; color: #555">
       If you are not redirected automatically, please wait a few moments.
     </p>
   </body>
