--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
       ];
 
       function redirectToRandomLink() {
-        const randomIndex = Math.floor(Math.random() * links.length);
+        let randomIndex = Math.floor(Math.random() * links.length);
+        let prev = randomIndex;
+        if (randomIndex == prev) {
+          randomIndex = Math.floor(Math.random() * links.length);
+          const randomLink = links[randomIndex];
+          window.location.href = randomLink;
+        }
         const randomLink = links[randomIndex];
         window.location.href = randomLink;
       }
